--- a/main.html
+++ b/main.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-<html>
-  <head>
-  </head>
-  <body>
-    Enter your name: <input type="text" id="fname">
-	
-	<script type="text/javascript" src="./script.js">
-	</script>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Capitalize Name</title>
+</head>
+<body>
+    <h1>Enter Your Name</h1>
+    <input type="text" id="fname" placeholder="Enter your name">
+    
+    <script>
+        // Function to convert input to uppercase on blur
+        document.getElementById('fname').addEventListener('blur', function() {
+            this.value = this.value.toUpperCase();
+        });
+    </script>
+</body>
 </html>
+
